<resources>
    <string name="app_name">GymDiary</string>
    <string name="create">Create training</string>
    <string name="start">Start training</string>
    <string name="schedule">Schedule</string>
    <string name="save">Save</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="done">Done!</string>
    <string name="sets">Sets</string>
    <string name="repetitions">Repetitions</string>
    <string name="enternumber">Enter number</string>
    <string name="add">Add</string>
    <string name="title">Title</string>
</resources>
